--- a/train.ipynb
+++ b/train.ipynb
@@ -9,52 +9,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from map import MapLoader\n",
-    "from monte_carlo import MonteCarlo, Policy"
+    "## Imports and global settings\n",
+    "The following section imports all necessary moduls to train the agent and sets global settings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_policy(agent, start_pos = (0, 16)):\n",
-    "    # Display the resulting policy for a subset of states for clarity\n",
-    "    for state in agent.policy.policy.keys():\n",
-    "        # Only show policy for zero velocity states for brevity\n",
-    "        if state[2:] == (0, 0):  \n",
-    "            print(f\"Policy at {state}: {agent.policy[state]}\")\n",
-    "\n",
-    "    # Display the number of states in the policy\n",
-    "    print(f\"There are {len(agent.policy)} states in policy\")\n",
-    "    \n",
-    "    # Verify the policy by running an episodes\n",
-    "    episode = agent.generate_episode(start=start_pos)\n",
-    "    print(\"Episode:\")\n",
-    "    for s, a, r in episode:\n",
-    "        print(f\"State: {s}, Action: {a}, Reward: {r}\")    "
+    "from monte_carlo_eval import eval\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Map 1"
+    "Afterwards we remove and add a director which is used to save the metrics for a trainings-run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_1 = MapLoader.load_map(\"./maps/map1.txt\")"
+    "!rm -r ./performance-logs\n",
+    "!mkdir ./performance-logs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following lines of code set the global parameters for the Monte Carlo simulation. The parameters are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_episodes = 10_000\n",
+    "checkpoint = 200"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, the following method performs the evaluation and saves them into dataframes for further analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addMetrics(map, epsilon, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness):\n",
+    "    # Evaluate the performance of the agent\n",
+    "    total_time, epoch_times, overall_effectiveness, checkpoint_effectiveness = eval(map, epsilon, num_episodes, checkpoint)\n",
+    "\n",
+    "    # Add the performance metrics to the dataframes\n",
+    "    df_total_times = pd.concat([pd.DataFrame([[map, epsilon, total_time]], columns=df_total_times.columns), df_total_times], ignore_index=True)\n",
+    "    df_overall_performance = pd.concat([pd.DataFrame([[map, epsilon, overall_effectiveness]], columns=df_overall_performance.columns), df_overall_performance], ignore_index=True)\n",
+    "    for i, epoch_time in enumerate(epoch_times):\n",
+    "        df_epoch_times = pd.concat([pd.DataFrame([[map, epsilon, i+1, epoch_time]], columns=df_epoch_times.columns), df_epoch_times], ignore_index=True)\n",
+    "\n",
+    "    for i, epoch_time in enumerate(checkpoint_effectiveness):\n",
+    "        df_checkpoint_effectiveness = pd.concat([pd.DataFrame([[map, epsilon, (i+1)*checkpoint, epoch_time]], columns=df_checkpoint_effectiveness.columns), df_checkpoint_effectiveness], ignore_index=True)\n",
+    "    \n",
+    "    return df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map 1\n",
+    "This section performs the evaluation of the reinforcement agent for `maps/map1.txt` for epsilon `0.9`, `0.7` and `0.5` respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times = pd.DataFrame(columns = ['map', 'epsilon', 'total_time'])\n",
+    "df_epoch_times = pd.DataFrame(columns = ['map', 'epsilon', 'episode', 'epoch_time'])\n",
+    "df_overall_performance = pd.DataFrame(columns = ['map', 'epsilon', 'overall_performance'])\n",
+    "df_checkpoint_effectiveness = pd.DataFrame(columns = ['map', 'epsilon', 'episode', 'checkpoint_effectiveness'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_name = \"map1\""
    ]
   },
   {
@@ -66,57 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [04:24<00:00,  3.78it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mc_map = MonteCarlo(map_1, num_episodes=1_000, train_epsilon=0.9, policy_filename=\"policies/map_09.txt.policy\")\n",
-    "mc_map.monte_carlo_control()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Policy at (6, 16, 0, 0): decrease_vy\n",
-      "Policy at (4, 16, 0, 0): decrease_vy\n",
-      "Policy at (8, 16, 0, 0): increase_vx\n",
-      "Policy at (1, 16, 0, 0): decrease_vx_vy\n",
-      "Policy at (5, 16, 0, 0): decrease_vx_vy\n",
-      "Policy at (7, 16, 0, 0): decrease_vy\n",
-      "Policy at (3, 16, 0, 0): decrease_vy\n",
-      "Policy at (2, 16, 0, 0): increase_vx_decrease_vy\n",
-      "Policy at (9, 16, 0, 0): decrease_vx_vy\n",
-      "Policy at (0, 16, 0, 0): increase_vx_decrease_vy\n",
-      "There are 2397 states in policy\n",
-      "Episode:\n",
-      "State: (0, 16, 0, 0), Action: increase_vx_decrease_vy, Reward: -1\n",
-      "State: (1, 15, 1, -1), Action: decrease_vx_vy, Reward: -1\n",
-      "State: (1, 13, 0, -2), Action: increase_vx, Reward: -1\n",
-      "State: (2, 11, 1, -2), Action: decrease_vx_increase_vy, Reward: -1\n",
-      "State: (2, 10, 0, -1), Action: decrease_vx_vy, Reward: -1\n",
-      "State: (1, 8, -1, -2), Action: increase_vx, Reward: -1\n",
-      "State: (1, 6, 0, -2), Action: increase_vx_vy, Reward: -1\n",
-      "State: (2, 5, 1, -1), Action: increase_vx, Reward: -1\n",
-      "State: (4, 4, 2, -1), Action: increase_vy, Reward: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_policy(mc_map)"
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.9, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
    ]
   },
   {
@@ -128,56 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:34<00:00, 28.90it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mc_map = MonteCarlo(map_1, num_episodes=1_000, train_epsilon=0.7, policy_filename=\"policies/map_07.txt.policy\")\n",
-    "mc_map.monte_carlo_control()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Policy at (7, 16, 0, 0): decrease_vx_vy\n",
-      "Policy at (2, 16, 0, 0): increase_vx_decrease_vy\n",
-      "Policy at (6, 16, 0, 0): decrease_vy\n",
-      "Policy at (4, 16, 0, 0): decrease_vx_vy\n",
-      "Policy at (5, 16, 0, 0): decrease_vy\n",
-      "Policy at (9, 16, 0, 0): increase_vx_decrease_vy\n",
-      "Policy at (0, 16, 0, 0): increase_vx_decrease_vy\n",
-      "Policy at (1, 16, 0, 0): decrease_vy\n",
-      "Policy at (3, 16, 0, 0): increase_vx_decrease_vy\n",
-      "Policy at (8, 16, 0, 0): decrease_vx_vy\n",
-      "There are 2292 states in policy\n",
-      "Episode:\n",
-      "State: (0, 16, 0, 0), Action: increase_vx_decrease_vy, Reward: -1\n",
-      "State: (1, 15, 1, -1), Action: decrease_vy, Reward: -1\n",
-      "State: (2, 13, 1, -2), Action: decrease_vx, Reward: -1\n",
-      "State: (2, 11, 0, -2), Action: no_change, Reward: -1\n",
-      "State: (2, 9, 0, -2), Action: increase_vx, Reward: -1\n",
-      "State: (3, 7, 1, -2), Action: decrease_vx, Reward: -1\n",
-      "State: (3, 5, 0, -2), Action: increase_vx_vy, Reward: -1\n",
-      "State: (4, 4, 1, -1), Action: increase_vx_vy, Reward: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_policy(mc_map)"
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.7, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
    ]
   },
   {
@@ -189,77 +159,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:15<00:00, 65.99it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mc_map = MonteCarlo(map_1, num_episodes=1_000, train_epsilon=0.5, policy_filename=\"policies/map_05.txt.policy\")\n",
-    "mc_map.monte_carlo_control()"
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.5, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Caching of results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Policy at (9, 16, 0, 0): decrease_vx_vy\n",
-      "Policy at (2, 16, 0, 0): increase_vx_decrease_vy\n",
-      "Policy at (3, 16, 0, 0): decrease_vy\n",
-      "Policy at (7, 16, 0, 0): decrease_vy\n",
-      "Policy at (6, 16, 0, 0): decrease_vy\n",
-      "Policy at (0, 16, 0, 0): increase_vx_decrease_vy\n",
-      "Policy at (4, 16, 0, 0): increase_vy\n",
-      "Policy at (5, 16, 0, 0): increase_vx_decrease_vy\n",
-      "Policy at (1, 16, 0, 0): decrease_vx_vy\n",
-      "Policy at (8, 16, 0, 0): decrease_vx_vy\n",
-      "There are 2178 states in policy\n",
-      "Episode:\n",
-      "State: (0, 16, 0, 0), Action: increase_vx_decrease_vy, Reward: -1\n",
-      "State: (1, 15, 1, -1), Action: decrease_vx_vy, Reward: -1\n",
-      "State: (1, 13, 0, -2), Action: no_change, Reward: -1\n",
-      "State: (1, 11, 0, -2), Action: decrease_vx, Reward: -1\n",
-      "State: (0, 9, -1, -2), Action: increase_vx, Reward: -1\n",
-      "State: (0, 7, 0, -2), Action: increase_vx, Reward: -1\n",
-      "State: (1, 5, 1, -2), Action: increase_vx_vy, Reward: -1\n",
-      "State: (3, 4, 2, -1), Action: decrease_vx_increase_vy, Reward: -1\n",
-      "State: (4, 4, 1, 0), Action: increase_vx, Reward: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print_policy(mc_map)"
+    "df_total_times.to_csv(f'./performance-logs/df_total_times_{map_name}.csv', index=False)\n",
+    "df_epoch_times.to_csv(f'./performance-logs/df_epoch_times_{map_name}.csv', index=False)\n",
+    "df_overall_performance.to_csv(f'./performance-logs/df_overall_performance_{map_name}.csv', index=False)\n",
+    "df_checkpoint_effectiveness.to_csv(f'./performance-logs/df_checkpoint_effectiveness_{map_name}.csv', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Map 2"
+    "## Map 2\n",
+    "This section performs the evaluation of the reinforcement agent for `maps/map2.txt` for epsilon `0.9`, `0.7` and `0.5` respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times = pd.DataFrame(columns = ['map', 'epsilon', 'total_time'])\n",
+    "df_epoch_times = pd.DataFrame(columns = ['map', 'epsilon', 'episode', 'epoch_time'])\n",
+    "df_overall_performance = pd.DataFrame(columns = ['map', 'epsilon', 'overall_performance'])\n",
+    "df_checkpoint_effectiveness = pd.DataFrame(columns = ['map', 'epsilon', 'episode', 'checkpoint_effectiveness'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_name = \"map2\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Map 3"
+    "### Epsilon 0.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.9, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Epsilon 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.7, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Epsilon 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.5, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Caching of results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times.to_csv(f'./performance-logs/df_total_times_{map_name}.csv', index=False)\n",
+    "df_epoch_times.to_csv(f'./performance-logs/df_epoch_times_{map_name}.csv', index=False)\n",
+    "df_overall_performance.to_csv(f'./performance-logs/df_overall_performance_{map_name}.csv', index=False)\n",
+    "df_checkpoint_effectiveness.to_csv(f'./performance-logs/df_checkpoint_effectiveness_{map_name}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map 3\n",
+    "This section performs the evaluation of the reinforcement agent for `maps/map3.txt` for epsilon `0.9`, `0.7` and `0.5` respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times = pd.DataFrame(columns = ['map', 'epsilon', 'total_time'])\n",
+    "df_epoch_times = pd.DataFrame(columns = ['map', 'epsilon', 'episode', 'epoch_time'])\n",
+    "df_overall_performance = pd.DataFrame(columns = ['map', 'epsilon', 'overall_performance'])\n",
+    "df_checkpoint_effectiveness = pd.DataFrame(columns = ['map', 'epsilon', 'episode', 'checkpoint_effectiveness'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_name = \"map3\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Epsilon 0.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.9, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Epsilon 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.7, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Epsilon 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness = addMetrics(map_name, 0.5, checkpoint, df_total_times, df_epoch_times, df_overall_performance, df_checkpoint_effectiveness)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Caching of results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total_times.to_csv(f'./performance-logs/df_total_times_{map_name}.csv', index=False)\n",
+    "df_epoch_times.to_csv(f'./performance-logs/df_epoch_times_{map_name}.csv', index=False)\n",
+    "df_overall_performance.to_csv(f'./performance-logs/df_overall_performance_{map_name}.csv', index=False)\n",
+    "df_checkpoint_effectiveness.to_csv(f'./performance-logs/df_checkpoint_effectiveness_{map_name}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Performance evaluation\n",
+    "This section plots and compares all the different performance metrics to get a better understanding of our implementation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preparation\n",
+    "This section combines all the previously generated dataframes to be able to work with all collected datapoints."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# work in progress"
+   ]
   }
  ],
  "metadata": {
