--- a/train.ipynb
+++ b/train.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## Imports and global settings\n",
-    "The following section imports all necessary moduls to train the agent and sets global settings."
+    "The following section imports all necessary modules to train the agent and sets global settings."
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Afterwards we remove and add a director which is used to save the metrics for a trainings-run."
+    "Afterwards we remove and add a directory which is used to save the metrics for a trainings-run."
    ]
   },
   {
